fix: imports error after migration