@@ -1,7 +1,9 @@
 package app.bpartners.api.service;
 
 import app.bpartners.api.endpoint.event.EventConf;
-import app.bpartners.api.endpoint.event.model.gen.CustomerCrupdated;
+import app.bpartners.api.endpoint.event.EventProducer;
+import app.bpartners.api.endpoint.event.SesConf;
+import app.bpartners.api.endpoint.event.gen.CustomerCrupdated;
 import app.bpartners.api.endpoint.rest.mapper.CustomerRestMapper;
 import app.bpartners.api.endpoint.rest.model.CreateCustomer;
 import app.bpartners.api.endpoint.rest.model.CustomerStatus;
@@ -25,7 +27,6 @@ import java.util.stream.Collectors;
 import javax.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import static app.bpartners.api.endpoint.event.EventProducer.Conf.MAX_PUT_EVENT_ENTRIES;
@@ -42,9 +43,14 @@ public class CustomerService {
       "ID,Nom,Prénom,Email,Site web,Adresse,Code postal,Ville,Pays,Commentaire,Type";
   private final CustomerRepository repository;
   private final CustomerRestMapper restMapper;
+  private final EventProducer eventProducer;
   private final EventConf eventConf;
+  private final SesConf sesConf;
   private final BanApi banApi;
-  private final CustomerCrupdatedService customerCrupdatedService;
+
+  private static String replaceNullValue(String value) {
+    return value == null ? "" : value;
+  }
 
   public void exportCustomers(String idUser, String fileType, PrintWriter pw) {
     var customers = repository.findAllByIdUserOrderByLastNameAsc(idUser);
@@ -74,7 +80,7 @@ public class CustomerService {
     if (filters != null && !filters.isEmpty()) {
       keywords.addAll(filters.stream()
           .map(String::toLowerCase)
-          .toList());
+          .collect(Collectors.toList()));
     }
     return repository.findByIdUserAndCriteria(idUser, firstName, lastName, email,
         phoneNumber, city, country, keywords, status, pageValue, pageSizeValue);
@@ -88,23 +94,22 @@ public class CustomerService {
   public List<Customer> crupdateCustomers(List<Customer> customers) {
     List<Customer> saved = repository.saveAll(customers);
 
-    List<CustomerCrupdated> customerCrupdatedList = saved.isEmpty() ? List.of()
+    List<Object> typedEvent = saved.isEmpty() ? List.of()
         : saved.stream().map(customer -> {
           User user = AuthProvider.getAuthenticatedUser();
-          return toCrupdatedEvent(user, customer, customer.isRecentlyAdded());
+          return toTypedEvent(user, customer, customer.isRecentlyAdded());
         })
         .collect(Collectors.toList());
-
-    int typedEventSize = customerCrupdatedList.size();
+    int typedEventSize = typedEvent.size();
     if (typedEventSize > MAX_PUT_EVENT_ENTRIES) {
       int subdivision = (int) Math.ceil(typedEventSize / (double) MAX_PUT_EVENT_ENTRIES);
       for (int i = 1; i <= subdivision; i++) {
         int firstIndex = i == 1 ? 0 : ((i - 1) * MAX_PUT_EVENT_ENTRIES);
         int afterLastIndex = i == subdivision ? typedEventSize : (i * MAX_PUT_EVENT_ENTRIES);
-        customerCrupdatedService.accept(customerCrupdatedList.subList(firstIndex, afterLastIndex));
+        eventProducer.accept(typedEvent.subList(firstIndex, afterLastIndex));
       }
     } else {
-      customerCrupdatedService.accept(customerCrupdatedList); //TODO: add appropriate test
+      eventProducer.accept(typedEvent); //TODO: add appropriate test
     }
 
     return saved;
@@ -129,12 +134,12 @@ public class CustomerService {
     }
   }
 
-  private CustomerCrupdated toCrupdatedEvent(User user, Customer customer, boolean isNew) {
+  private CustomerCrupdated toTypedEvent(User user, Customer customer, boolean isNew) {
     String subject = isNew
         ? "Ajout du nouveau client " + customer.getFullName() + " par l'artisan " + user.getName()
         : "Modification du client existant " + customer.getFullName() + " par l'artisan "
         + user.getName();
-    String recipientEmail = eventConf.getAdminEmail();
+    String recipientEmail = sesConf.getAdminEmail();
     return new CustomerCrupdated()
         .subject(subject)
         .recipientEmail(recipientEmail)
@@ -144,7 +149,7 @@ public class CustomerService {
         .customer(customer);
   }
 
-  @Scheduled(cron = Scheduled.CRON_DISABLED)
+  //@Scheduled(cron = Scheduled.CRON_DISABLED)
   public void updateCustomersLocation() {
     List<Customer> customers = repository.findWhereLatitudeOrLongitudeIsNull();
     int customersCount = customers.size();
@@ -196,9 +201,5 @@ public class CustomerService {
   @Transactional
   public List<Customer> findByAccountHolderId(String accountHolderId) {
     return repository.findByIdAccountHolder(accountHolderId);
-  }
-
-  private static String replaceNullValue(String value) {
-    return value == null ? "" : value;
   }
 }
